tests/__snapshots__/validation-configFile-handles-crlf.snap.txt
Error: Value for the 'failFast' option must be a boolean.

  1 | {
  2 |   "failFast": "always",
    |               ~~~~~~~~
  3 |   "rootPath": true
  4 | }
  5 | 

      at ./tstyche.config.json:2:15

Error: Value for the 'rootPath' option must be a string.

  1 | {
  2 |   "failFast": "always",
  3 |   "rootPath": true
    |               ~~~~
  4 | }
  5 | 
  6 | 

      at ./tstyche.config.json:3:15

